fixed favicon and maybe cam commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Citizen Kane</title>
+
+    <link rel="shortcut icon" href="./assets/images/fav.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
@@ -31,7 +33,7 @@
         <div class="header__container">
             <nav class="nav">
                 <div class="nav__item">
-                    <p class="logo">Albion</p>
+                    <p class="logo">Citizen Kane</p>
                 </div>
                 <div class="nav__item">
                     <ul class="nav__list">
@@ -92,7 +94,7 @@
                 </div>
                 <textarea name="" id="modal-text" cols="30" rows="10" placeholder="Enter the text"></textarea>
                 <div class="box">
-                    <input type="file" name="file-6" id="file-6" class="inputfile inputfile-5" />
+                    <input type="file" name="file-6" id="file-6" class="inputfile inputfile-5" accept="image/*;capture=camera"/>
                     <label for="file-6">
                         <figure>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
@@ -109,157 +111,13 @@
     </div>
     
     <div class="news__container">
-        <div class="news__item" id="11">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">Buisness section</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/960x0 (1).jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    While the innovative nature of a startup entails that its exact business model would be a somewhat
-                    unique combination of different factors and involves multiple key choices related to the business,
-                    you don’t always have to reinvent the wheel.
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="news__item" id="22">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">Technology</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/960x0.jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    Steve "The Commissioner" Stoute’s UnitedMasters, music
-                    distribution and data analytics company, has raised a
-                    $50 million series B round led by Apple. UnitedMasters
-                    leveraging analytics to holistically monetize fans could
-                    go a long way in uncovering new opportunities for
-                    revenue growth.
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="news__item" id="33">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">National news</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/vsg8JQAxZQw.jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    Nevskaya Manufaktura Russian authorities suspect arson
-                    after fire destroys historic St. Petersburg factory
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="news__item" id="44">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">Sports section</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/7XYcQAD2tuA.jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    Formula 1 announced it was launching a fully-immersive virtual reality app and will provide fans
-                    with behind-the-scenes footage and unique races views all in 360-degree virtual reality technology.
-                    F1 will partner with The Dream VR on the launch.
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="news__item" id="55">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">Politics and society</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/njwvX_z37b4.jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    Cancel culture has no gotten to the point where people are being canceled for things they didn't
-                    even say.
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="news__item" id="66">
-            <div class="news__head">
-                <div class="news__head_info">
-                    <h3 class="news__title">Title</h3>
-                    <span class="news__topic">Entertainment</span>
-                </div>
-                <div class="news__head_img">
-                    <img src="./assets/images/VoCghCOan9c.jpg" alt="" />
-                </div>
-            </div>
-            <div class="news__body">
-                <p class="news__body_text">
-                    It seems as though Netflix’s commitment to producing more true crime series is paying off, as the
-                    streaming service’s latest docuseries just upended 'Firefly Lane’s seemingly unstoppable seven-day
-                    run atop the Top 10 charts
-                </p>
-                <div class="news__body_info">
-                    <span class="news__date">16.04.2021</span>
-                    <button class="news__full">
-                        Full content
-                    </button>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
     <footer>
         <div class="footer__container">
             <p class="footer__text">
-                The site was created for educational purpose © 2021 Albion
+                The site was created for educational purpose © 2021 Citizen Kane
             </p>
         </div>
     </footer>
