commit with paragraph

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="modal__fade" id="modal">
         <form class="modal" name="modal">
             <div class="modal__header">
-                <input type="text" name="" id="modal-title" placeholder="Enter the news title" class="modal__title" />
+                <input id="modal-title" placeholder="Enter the news title" class="modal__title" />
                 <span id="close" class="close">&times;</span>
             </div>
             <div class="modal__body">
